Commit of 03-05-2020 #master

--- a/src/app/product/containers/product-form-root/product-form-root.component.html
+++ b/src/app/product/containers/product-form-root/product-form-root.component.html
@@ -8,5 +8,6 @@
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(product)"
+        (close)="onClose()"
     ></app-product-form>
 </div>
