--- a/src/app/role/containers/role-form-root/role-form-root.component.html
+++ b/src/app/role/containers/role-form-root/role-form-root.component.html
@@ -4,9 +4,9 @@
         [role]="role$ | async"
         [privileges]="privileges$ | async"
         [isEditing]="isEditing$ | async"
-        [editEnabled]="roleEditEnabled$ | async"
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(role)"
+        (close)="onClose()"
     ></app-role-form>
 </div>
