--- a/src/app/sale-monitoring/containers/sale-root/sale-root.component.html
+++ b/src/app/sale-monitoring/containers/sale-root/sale-root.component.html
@@ -1,9 +1,7 @@
-<div class="container">
+<div class="container" [class.detail-hidden]="!(sale$ | async)">
     <header>Suivi des ventes</header>
     <div class="search-bar">
-        <app-search-bar
-            (search)="onSearch($event)"
-        ></app-search-bar>
+        <app-search-bar (search)="onSearch($event)" [placeholder]="'Rechercher par client, vendeur'"></app-search-bar>
     </div>
 
     <div class="filter" data-simplebar>
@@ -28,7 +26,7 @@
         </app-loader>
     </div>
 
-    <div class="detail">
+    <div class="detail" [class.no-border]="!(sale$ | async)">
         <app-sale-detail *ngIf="sale$ | async as sale" [sale]="sale"></app-sale-detail>
     </div>
 
