--- a/src/app/user/containers/user-form-root/user-form-root.component.html
+++ b/src/app/user/containers/user-form-root/user-form-root.component.html
@@ -8,5 +8,6 @@
         (edit)="onEdit($event)"
         (save)="onSave($event)"
         (cancel)="onCancelEdit(user)"
+        (close)="onClose()"
     ></app-user-form>
 </div>
