--- a/src/app/role/components/role-form/role-form.component.html
+++ b/src/app/role/components/role-form/role-form.component.html
@@ -1,62 +1,56 @@
-<div class="container" *ngIf="form">
-    <div class="role-container">
-        <form (submit)="onSubmit()" [formGroup]="form">
-            <div class="controls" data-simplebar>
-                <div class="control">
-                    <label for="name">Nom *</label>
-                    <input #first formControlName="name" id="name" type="text" />
-                    <app-validation-error
-                        [control]="form.controls['name']"
-                        [customErrorLabels]="{ duplicateEntry: 'Ce nom existe déjà' }"
-                    ></app-validation-error>
-                </div>
-
-                <div class="privilege-container" formGroupName="privileges">
-                    <ul *ngFor="let category of categories" class="accordion">
-                        <li [formArrayName]="category" class="has-children">
-                            <input [id]="category" checked class="toggle" type="checkbox" />
-                            <label [for]="category">
-                                <span>{{ categoryLabels[category] | titlecase }}</span>
-                                <div class="arrow"></div>
-                            </label>
-                            <ul>
-                                <li
-                                    *ngFor="
-                                        let privilege of getCategoryPrivileges(category);
-                                        let i = index
-                                    "
-                                    [formGroupName]="i"
-                                >
-                                    <input
-                                        [id]="privilege.get('name').value"
-                                        formControlName="active"
-                                        type="checkbox"
-                                    />
-                                    <label [for]="privilege.get('name').value">
-                                        {{
-                                            userPrivilegeLabels[privilege.get('name').value]
-                                                | titlecase
-                                        }}
-                                    </label>
-                                </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </div>
+<div class="container">
+    <header>
+        <div class="form-title">Création rôle</div>
+        <svg (click)="close.emit()" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15 15">
+            <path
+                d="M9,7.5l5.83-5.91a.48.48,0,0,0,0-.69L14.11.15a.46.46,0,0,0-.68,0l-5.93,6L1.57.15a.46.46,0,0,0-.68,0L.15.9a.48.48,0,0,0,0,.69L6,7.5.15,13.41a.48.48,0,0,0,0,.69l.74.75a.46.46,0,0,0,.68,0l5.93-6,5.93,6a.46.46,0,0,0,.68,0l.74-.75a.48.48,0,0,0,0-.69Z"
+            ></path>
+        </svg>
+    </header>
+    <main data-simplebar>
+        <form *ngIf="form" [formGroup]="form" (submit)="onSubmit(form)">
+            <div class="control">
+                <label for="name">Nom *</label>
+                <input #first formControlName="name" id="name" type="text" />
+                <app-validation-error
+                    [control]="form.controls['name']"
+                    [customErrorLabels]="{ duplicateEntry: 'Ce nom existe déjà.' }"
+                ></app-validation-error>
+            </div>
+            <div class="privilege-container" formGroupName="privileges">
+                <ul *ngFor="let category of categories" class="accordion">
+                    <li [formArrayName]="category" class="has-children">
+                        <input [id]="category" checked class="toggle" type="checkbox" />
+                        <label [for]="category">
+                            <span>{{ categoryLabels[category] | titlecase }}</span>
+                            <div class="arrow"></div>
+                        </label>
+                        <ul>
+                            <li *ngFor="let privilege of getCategoryPrivileges(category); let i = index" [formGroupName]="i">
+                                <input [id]="privilege.get('name').value" formControlName="active" type="checkbox" />
+                                <label [for]="privilege.get('name').value">
+                                    {{ userPrivilegeLabels[privilege.get('name').value] | titlecase }}
+                                </label>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </form>
-    </div>
-    <div class="button-container">
-        <button
+    </main>
+    <footer>
+        <div class="buttons">
+            <button
             class="blue"
             *ngIf="!form.enabled"
             (click)="edit.emit(form.value)"
-        >
-            MODIFIER
-        </button>
-        <button class="blue" *ngIf="form.enabled" (click)="onSubmit(form)">ENREGISTRER</button>
-        <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">
-            ANNULER
-        </button>
-    </div>
+            >
+                MODIFIER
+            </button>
+            <button class="blue" *ngIf="form.enabled" (click)="onSubmit(form)">ENREGISTRER</button>
+            <button class="dark-purple" *ngIf="form.enabled" (click)="cancel.emit()">
+                ANNULER
+            </button>
+        </div>
+    </footer>
 </div>
