--- a/src/app/role/components/role-form/role-form.component.scss
+++ b/src/app/role/components/role-form/role-form.component.scss
@@ -1,36 +1,21 @@
 @import 'forms.scss';
 @import 'buttons.scss';
-@import 'colors.scss';
-@import 'buttons.scss';
-@import 'checkboxes.scss';
+@import 'details.scss';
 @import 'accordion.scss';
+@import 'checkboxes.scss';
 
-form {
-    @extend %generic-form;
-    max-width: unset;
-    max-height: calc(100vh - 150px - 10px * 2 - 25px * 2 - 67px - 90px - 40px);
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-
-    .controls {
-        flex: 1;
+.container {
+    @extend %detail-layout;
+    form {
+        @extend %generic-form;
+        max-width: 100%;
     }
 }
 
-h3 {
-    @extend %generic-form-title;
-    text-transform: uppercase;
-}
-
-label {
-    @extend %default-form-text;
-}
-
-.role-container {
-    @extend %default-form-container;
-    height: 100%;
-    padding: 0;
+.buttons {
+    width: 100%;
+    display: flex;
+    justify-content: center;
 }
 
 ul {
@@ -43,18 +28,12 @@ ul {
     }
 }
 
-.container {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-}
-
 .accordion {
     @extend %accordion;
 
     label {
         display: inline;
+        font-size: 12px;
     }
 
     input[formControlName] + label {
@@ -70,21 +49,10 @@ ul {
     }
 }
 
-.button-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    margin: 0;
+.blue {
+    @extend %blue-button;
+}
 
-    button {
-        @extend %button;
-    }
-
-    .blue {
-        @extend %blue-button;
-    }
-
-    .dark-purple {
-        @extend %dark-purple-button;
-    }
+.dark-purple {
+    @extend %dark-purple-button;
 }
