--- a/src/app/sale-monitoring/components/sale-list/sale-list.component.scss
+++ b/src/app/sale-monitoring/components/sale-list/sale-list.component.scss
@@ -1,12 +1,14 @@
 @import 'tables.scss';
 
-$c1Width: 15%;
+$c1Width: 10%;
 $c2Width: 15%;
-$c3Width: 20%;
-$c4Width: 20%;
-$c5Width: 20%;
-$c6Width: 10%;
-$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
+$c3Width: 13%;
+$c4Width: 13%;
+$c5Width: 15%;
+$c6Width: 12%;
+$c7Width: 12%;
+$c8Width: 10%;
+$tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width + $c7Width + $c8Width;
 
 @mixin thTdWidth($width) {
     width: $width;
@@ -42,6 +44,14 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width + $c5Width + $c6Width;
         tbody td:nth-child(6),
         thead th:nth-child(6) {
             @include thTdWidth($c6Width);
+        }
+        tbody td:nth-child(7),
+        thead th:nth-child(7) {
+            @include thTdWidth($c7Width);
+        }
+        tbody td:nth-child(8),
+        thead th:nth-child(8) {
+            @include thTdWidth($c8Width);
         }
     }
 }
