--- a/src/app/sale/components/consignation-list/consignation-list.component.scss
+++ b/src/app/sale/components/consignation-list/consignation-list.component.scss
@@ -41,8 +41,7 @@ $tableWidth: $c1Width + $c2Width + $c3Width + $c4Width;
     }
 }
 
-.consignation {
+.info-container {
     background: #fff !important;
-    border: 1px solid red !important;
     margin: 1px 0;
 }
