--- a/src/app/user/containers/user-root/user-root.component.html
+++ b/src/app/user/containers/user-root/user-root.component.html
@@ -1,7 +1,7 @@
-<div class="container">
+<div class="container" [class.detail-hidden]="!(isEditingOrDetail$ | async)">
     <header>Gestion des utilisateurs</header>
     <div class="search-bar">
-        <app-search-bar (search)="onSearch($event)"></app-search-bar>
+        <app-search-bar (search)="onSearch($event)" [placeholder]="'Rechercher par nom, prénom'"></app-search-bar>
     </div>
     <div class="list">
         <app-loader [isLoading]="usersLoading$ | async">
@@ -26,7 +26,7 @@
             (paginate)="onPaginate($event)"
         ></app-pagination>
     </footer>
-    <div class="detail">
+    <div class="detail" [class.no-border]="!(isEditingOrDetail$ | async)">
         <router-outlet></router-outlet>
     </div>
 </div>
